--- a/docs/wearables/sdks/ios.mdx
+++ b/docs/wearables/sdks/ios.mdx
@@ -319,11 +319,19 @@ Also add the following key in your `Info.plist`:
 <string>your description</string>
 ```
 
-You then set-up the client:
+You then set-up the VitalClient — if you already haven't done so — and the VitalHealthKitClient:
 
 ```swift
 import VitalHealthKit
 
+VitalClient.configure(
+    apiKey: "xyz",
+    environment: .sandbox(.us)
+)
+
+VitalClient.setUserId(result.userId)
+
+// precondition: VitalClient must have been configured.
 VitalHealthKitClient.configure(
     .init(
         mode: ..., // automatic by default
@@ -336,18 +344,6 @@ VitalHealthKitClient.configure(
 
 That's it!
 
-Just like `VitalDevices`, you need to configure the `VitalClient` at some point during your flow. Like this:
-
-```swift
-import VitalCore
-
-VitalClient.configure(
-    apiKey: "xyz",
-    environment: .sandbox(.us)
-)
-
-VitalClient.setUserId(result.userId)
-```
 
 <Note>
 `VitalHealthKit` will check if the `userId` has an associted Apple HealthKit connected source. If it doesn't, it will create one automatically. This means that you don't need to do this:
@@ -443,41 +439,10 @@ Each type will hint you about its units. For example, water is in milliliters.
 
 ### 3. Background Delivery
 
-You can enable the SDK to deliver HealthKit data in background. This provides a more seamless experience, since the user doesn't need to open your app to sync data. Start by enabling "Background Delivery" in the app capabilities:
+Vital iOS SDK can continuously observe new data written to Apple HealthKit through the Background Delivery mechanism.
 
-<img src="/img/iOS/health_kit_permission_background_delivery.png" />
+Please refer to [this guide](/wearables/guides/apple_health_kit) on enabling Background Delivery that is applicable for all platforms (iOS, Flutter and React Native).
 
-Once this is done, you should setup the SDK like so:
-
-```swift
-import VitalHealthKit
-
-VitalHealthKitClient.configure(backgroundDeliveryEnabled: true)
-```
-
-That's the only thing you need to do! If you are using background delivery, you don't need to call `syncData:`. Depending on the `HKSampleType` syncing, updates will come after a period of time.
-
-<Warning>
-
-As per the [documentation](https://developer.apple.com/documentation/healthkit/hkhealthstore/1614175-enablebackgrounddelivery):
-
-> As soon as your app launches, HealthKit calls the update handler for any observer queries that match the newly saved data. If you plan on supporting background delivery, set up all your observer queries in your app delegate’s application(_:didFinishLaunchingWithOptions:) method. By setting up the queries in `application(_:didFinishLaunchingWithOptions:)`, you ensure that you’ve instantiated your queries, and they’re ready to use before HealthKit delivers the updates.
-
-This means that you should make sure you call `VitalHealthKitClient.configure(.init(backgroundDeliveryEnabled: true))` in your app delegate's `application(_:didFinishLaunchingWithOptions:)` method.
-
-</Warning>
-
-<Warning>
-
-As per the [documentation](https://developer.apple.com/documentation/healthkit/hkhealthstore/1614175-enablebackgrounddelivery):
-
-> HealthKit wakes your app whenever a process saves or deletes samples of the specified type. The system wakes your app at most once per time period defined by the specified frequency. Some sample types have a maximum frequency of `HKUpdateFrequency.hourly`. The system enforces this frequency transparently.
->
-> For example, on iOS, `stepCount` samples have an hourly maximum frequency.
-
-This means that although we have background delivery's frequency set to `.hourly`, we cannot guarantee hourly syncing on the dot.
-
-</Warning>
 
 ### 4. Clean Up
 
@@ -511,11 +476,7 @@ await VitalClient.shared.user.deregisterProvider(provider: .appleHealthKit)
 
 ### 5. Miscellaneous Information
 
-#### i) Apple HealthKit SDK Setup Sequence
-
-Please refer to [this guide](/wearables/guides/apple_health_kit) that is applicable for all platforms (iOS, Flutter and React Native).
-
-#### ii) VitalHealthKit configuration
+#### i) VitalHealthKit configuration
 
 The `VitalHealthKitClient` can be configured with the following options:
 
@@ -524,11 +485,11 @@ The `VitalHealthKitClient` can be configured with the following options:
 - `logsEnabled`: Whether or not to enable logs. Useful when debugging. By default, this is `false`.
 - `numberOfDaysToBackFill`: Number of days to fetch data for. The first you configure the SDK, we will get X days of amount of data for the permissions you requested. By default, this is `90`.
 
-#### iii) `sync` versus background delivery
+#### ii) `sync` versus background delivery
 
 If you are using background delivery, you don't need to call `VitalHealthKit.shared.sync`. When you call `VitalHealthKit.configure` with `backgroundDeliveryEnabled: true`, the SDK will automatically sync data. Afterwards, it will periodically sync data when it's available. You should call `VitalHealthKit.shared.sync` if you are confident that there's new data available (e.g. your app is writting to HealthKit) and you want to sync immediately.
 
-#### iv) App with existing HealthKit permissions
+#### iii) App with existing HealthKit permissions
 
 As of version `0.4.6` we are syncing the following types:
 
@@ -579,7 +540,7 @@ If your app already asked for one, or more, of these permissions, we will try to
 1. For example, if the user gave permission for steps, we will try sync steps as part of an Activity. This means that this data is available via `/summary/activity/` endpoint.
 2. Types part of `Vitals` (e.g. `heartrate`, `bloodGlucose`), are treated as timeseries data, so they are available via the timeseries API: `/timeseries/`.
 
-#### v) Information flow
+#### iv) Information flow
 
 For most users, the SDK is configured with background delivery to `true`. Data is synced on your behalf and you don't need to think about it. Eventually, to display the information back to an end-user, you make an HTTP request to a server. The data flow usually looks like this:
 
@@ -603,6 +564,6 @@ If your user is sharing Apple HealthKit data and some other provider, we highly 
 
 </Note>
 
-#### vi) Sleep Data
+#### v) Sleep Data
 
 For Apple HealthKit we restrict the apps (or sources) from which we read sleep data. We do this because many third party apps will write their own version of sleep data to the device. For example, if you sleep with your Apple Watch and you have the [Pillow app](https://pillow.app) installed on your phone, there will be two instances of a sleep stored in Apple HealthKit. For the time being, the only apps we are accepting data from can be found [here](https://github.com/tryVital/vital-ios/blob/main/Sources/VitalHealthKit/HealthKit/Models/DataSource.swift).
