feat: Improve critical results testing instructions

--- a/docs/lab/workflow/lab-test-lifecycle.mdx
+++ b/docs/lab/workflow/lab-test-lifecycle.mdx
@@ -175,3 +175,9 @@ After you receive the webhook, you can use the [`GET /order/{order_id}/result`](
 
 You can test the webhook event by using the [Vital Dashboard](https://app.tryvital.io) Webhooks section,
 where you can register an endpoint and subscribe to the `labtest.result.critical` event.
+The following images shows what the screen should look like after you have an endpoint registered
+and has selected the `Testing` section inside the endpoint configurations.
+
+<img src="/img/critical-event-testing.png" width="100%" />
+
+You can then click the `Send Example` button and should receive a HTTP call in the registered url.
