--- a/docs/home/quickstart.mdx
+++ b/docs/home/quickstart.mdx
@@ -285,20 +285,22 @@ There are a few directions you can go in now:
 
 <Card
   title="Vital Link"
-  icon={regular("link")}
+  icon="link"
+  iconType="regular"
   href="/wearables/vital-link/introduction"
 >
   A client-side component your users will interact with in order to link their
   accounts with Vital. It allows you to access their accounts via the Vital API.
 </Card>
 
-<Card title="Vital SDKs" icon={regular("toolbox")} href="/wearables/sdks/ios">
+<Card title="Vital SDKs" icon="toolbox" iconType="regular" href="/wearables/sdks/ios">
   Native toolkits to integrate Vital into iOS, Android, and Flutter
 </Card>
 
 <Card
   title="Vital Webhooks"
-  icon={regular("circle-nodes")}
+  icon="circle-nodes"
+  iconType="regular"
   href="/webhooks/introduction"
 >
   Webhooks are a way to receive data from Vital. We frequently poll to receive
