--- a/docs/api-reference/sleep/get-stream.mdx
+++ b/docs/api-reference/sleep/get-stream.mdx
@@ -107,7 +107,7 @@ data = await client.Sleep.getStream(sleep_id=*)
       "start": "2022-08-04T12:42:45.722168+00:00",
       "end": "2022-08-04T12:43:15.722179+00:00",
       "value": 1,
-      "type": "None",
+      "type": null,
       "unit": "stage"
     },
     {
@@ -116,7 +116,7 @@ data = await client.Sleep.getStream(sleep_id=*)
       "start": "2022-08-04T12:43:15.722179+00:00",
       "end": "2022-08-04T12:43:45.722190+00:00",
       "value": 0,
-      "type": "None",
+      "type": null,
       "unit": "stage"
     },
     {
@@ -125,7 +125,7 @@ data = await client.Sleep.getStream(sleep_id=*)
       "start": "2022-08-04T12:43:45.722190+00:00",
       "end": "2022-08-04T12:44:15.722201+00:00",
       "value": 4,
-      "type": "None",
+      "type": null,
       "unit": "stage"
     },
     {
@@ -134,7 +134,7 @@ data = await client.Sleep.getStream(sleep_id=*)
       "start": "2022-08-04T12:44:15.722201+00:00",
       "end": "2022-08-04T12:44:45.722212+00:00",
       "value": 0,
-      "type": "None",
+      "type": null,
       "unit": "stage"
     },
     {
@@ -143,7 +143,7 @@ data = await client.Sleep.getStream(sleep_id=*)
       "start": "2022-08-04T12:44:45.722212+00:00",
       "end": "2022-08-04T12:42:45.722223+00:00",
       "value": 4,
-      "type": "None",
+      "type": null,
       "unit": "stage"
     }
   ],
