Update timeseries examples wrt measurement type

--- a/docs/api-reference/activity-timeseries/calories_basal.mdx
+++ b/docs/api-reference/activity-timeseries/calories_basal.mdx
@@ -26,7 +26,7 @@ Not implemented yet.
     "timestamp": "2022-04-20T13:02:01.123771+00:00",
     "timezone_offset": 3600,
     "value": 123,
-    "type": "automatic",
+    "type": null,
     "unit": "kcal"
   }
 ]
