--- a/docs/api-reference/activity-timeseries/distance.mdx
+++ b/docs/api-reference/activity-timeseries/distance.mdx
@@ -28,7 +28,7 @@ Not implemented yet.
     "end": "2022-04-20T13:03:01.123771+00:00",
     "timezone_offset": 3600,
     "value": 123,
-    "type": "automatic",
+    "type": null,
     "unit": "m"
   }
 ]
