--- a/docs/api-reference/vitals/blood-pressure.mdx
+++ b/docs/api-reference/vitals/blood-pressure.mdx
@@ -27,7 +27,7 @@ Not implemented yet.
     "timestamp": "2022-08-04T12:42:45.727135+00:00",
     "systolic": "125",
     "diastolic": "75",
-    "type": "cuff",
+    "type": null,
     "unit": "mmHg"
   }
 ]
