--- a/docs/api-reference/vitals/heartrate.mdx
+++ b/docs/api-reference/vitals/heartrate.mdx
@@ -30,7 +30,7 @@ data = client.Vitals.heartrate(
     "id": 123,
     "timestamp": "2022-04-20T13:02:01.123771+00:00",
     "value": "70",
-    "type": "automatic",
+    "type": null,
     "unit": "bpm"
   }
 ]
