--- a/docs/api-reference/vitals/mindfulness-minutes.mdx
+++ b/docs/api-reference/vitals/mindfulness-minutes.mdx
@@ -28,7 +28,7 @@ Not implemented yet.
     "start": "2023-01-19T13:50:31+00:00",
     "end": "2023-01-19T13:51:31+00:00",
     "value": 60.0,
-    "type": "automatic",
+    "type": null,
     "unit": "min"
   }
 ]
