--- a/docs/wearables/providers/resources.mdx
+++ b/docs/wearables/providers/resources.mdx
@@ -86,35 +86,35 @@ For example, `Workouts` is made up of fields specific to an workout, like calori
     "id": 79009531,
     "timestamp": "2022-04-29T08:35:57+00:00",
     "value": 174.0,
-    "type": "automatic",
+    "type": null,
     "unit": "bpm"
   },
   {
     "id": 79005064,
     "timestamp": "2022-04-30T11:22:38+00:00",
     "value": 79.0,
-    "type": "automatic",
+    "type": null,
     "unit": "bpm"
   },
   {
     "id": 79005065,
     "timestamp": "2022-04-30T11:22:39+00:00",
     "value": 80.0,
-    "type": "automatic",
+    "type": null,
     "unit": "bpm"
   },
   {
     "id": 79005066,
     "timestamp": "2022-04-30T11:22:40+00:00",
     "value": 78.0,
-    "type": "automatic",
+    "type": null,
     "unit": "bpm"
   },
   {
     "id": 79005067,
     "timestamp": "2022-04-30T11:22:41+00:00",
     "value": 78.0,
-    "type": "automatic",
+    "type": null,
     "unit": "bpm"
   }
 ]
