--- a/docs/webhooks/event-structure.mdx
+++ b/docs/webhooks/event-structure.mdx
@@ -139,14 +139,14 @@ and some may even send updates ASAP on time buckets that have incomplete data. F
       {
         "timestamp": "2023-05-16T10:00:00+00:00",
         "timezone_offset": 3600,
-        "type": "automatic",
+        "type": null,
         "unit": "count",
         "value": 237
       },
       {
         "timestamp": "2023-05-16T11:00:00+00:00",
         "timezone_offset": 3600,
-        "type": "automatic",
+        "type": null,
         "unit": "count",
         "value": 451
       },
