--- a/docs/api-reference/sleep/get-stream.mdx
+++ b/docs/api-reference/sleep/get-stream.mdx
@@ -31,35 +31,35 @@ data = await client.Sleep.getStream(sleep_id=*)
       "id": 0,
       "timestamp": "2022-08-04T12:42:45.722013+00:00",
       "value": 98,
-      "type": "automatic",
+      "type": null,
       "unit": "rmssd"
     },
     {
       "id": 1,
       "timestamp": "2022-08-04T12:43:15.722058+00:00",
       "value": 44,
-      "type": "automatic",
+      "type": null,
       "unit": "rmssd"
     },
     {
       "id": 2,
       "timestamp": "2022-08-04T12:43:45.722075+00:00",
       "value": 75,
-      "type": "automatic",
+      "type": null,
       "unit": "rmssd"
     },
     {
       "id": 3,
       "timestamp": "2022-08-04T12:44:15.722089+00:00",
       "value": 100,
-      "type": "automatic",
+      "type": null,
       "unit": "rmssd"
     },
     {
       "id": 4,
       "timestamp": "2022-08-04T12:44:45.722101+00:00",
       "value": 59,
-      "type": "automatic",
+      "type": null,
       "unit": "rmssd"
     }
   ],
@@ -68,35 +68,35 @@ data = await client.Sleep.getStream(sleep_id=*)
       "id": 0,
       "timestamp": "2022-08-04T12:42:45.722112+00:00",
       "value": 29,
-      "type": "automatic",
+      "type": null,
       "unit": "bpm"
     },
     {
       "id": 1,
       "timestamp": "2022-08-04T12:43:15.722124+00:00",
       "value": 162,
-      "type": "automatic",
+      "type": null,
       "unit": "bpm"
     },
     {
       "id": 2,
       "timestamp": "2022-08-04T12:43:45.722135+00:00",
       "value": 75,
-      "type": "automatic",
+      "type": null,
       "unit": "bpm"
     },
     {
       "id": 3,
       "timestamp": "2022-08-04T12:44:15.722146+00:00",
       "value": 11,
-      "type": "automatic",
+      "type": null,
       "unit": "bpm"
     },
     {
       "id": 4,
       "timestamp": "2022-08-04T12:44:45.722157+00:00",
       "value": 41,
-      "type": "automatic",
+      "type": null,
       "unit": "bpm"
     }
   ],
@@ -152,35 +152,35 @@ data = await client.Sleep.getStream(sleep_id=*)
       "id": 0,
       "timestamp": "2022-08-04T12:42:45.722223+00:00",
       "value": 30,
-      "type": "automatic",
+      "type": null,
       "unit": "bpm"
     },
     {
       "id": 1,
       "timestamp": "2022-08-04T12:43:15.722234+00:00",
       "value": 29,
-      "type": "automatic",
+      "type": null,
       "unit": "bpm"
     },
     {
       "id": 2,
       "timestamp": "2022-08-04T12:43:45.722245+00:00",
       "value": 19,
-      "type": "automatic",
+      "type": null,
       "unit": "bpm"
     },
     {
       "id": 3,
       "timestamp": "2022-08-04T12:44:15.722256+00:00",
       "value": 14,
-      "type": "automatic",
+      "type": null,
       "unit": "bpm"
     },
     {
       "id": 4,
       "timestamp": "2022-08-04T12:44:45.722266+00:00",
       "value": 18,
-      "type": "automatic",
+      "type": null,
       "unit": "bpm"
     }
   ]
