--- a/docs/api-reference/vitals/caffeine.mdx
+++ b/docs/api-reference/vitals/caffeine.mdx
@@ -28,7 +28,7 @@ Not implemented yet.
     "start": "2022-04-20T13:02:01.123771+00:00",
     "end": "2022-04-20T13:03:01.123771+00:00",
     "value": 42,
-    "type": "automatic",
+    "type": null,
     "unit": "g"
   }
 ]
