--- a/docs/api-reference/vitals/water.mdx
+++ b/docs/api-reference/vitals/water.mdx
@@ -26,7 +26,7 @@ Not implemented yet.
     "id": null,
     "timestamp": "2022-04-20T13:02:01.123771+00:00",
     "value": 400,
-    "type": "automatic",
+    "type": null,
     "unit": "ml"
   }
 ]
