[VIT-4592] Move cronometer to beta integration

--- a/docs/wearables/providers/introduction.mdx
+++ b/docs/wearables/providers/introduction.mdx
@@ -57,13 +57,13 @@ We currently Support over 300+ devices, a full list can be seen below.
 | ---------------------------------------------------------------------- | ---------------- | ------------------------------------------ |
 | [Android Health Connect](https://developer.android.com/health-connect) | `health_connect` | Health and fitness data on Android devices |
 | [Polar](https://www.polar.com/accesslink-api/#polar-accesslink-api)    | `polar`          | Finnish sports tech pioneer                |
+| [Cronometer](https://www.cronometer.com)                               | `cronometer`     | Nutrition data                             |
 
 **Planned**: On our roadmap
 
 | Provider                                        | Slug         | Description               | Stage   |
 | ----------------------------------------------- | ------------ | ------------------------- | ------- |
 | [Xiaomi](https://www.xiaomi.com)                | `xiaomi`     | All data                  | Enquire |
-| [Cronometer](https://www.cronometer.com)        | `cronometer` | Nutrition data            | Enquire |
 | [Suunto](https://www.suunto.com)                | `suunto`     | Fitness Watch             | Planned |
 | [iGlucose](https://smartmeterrpm.com/iglucose/) | `iglucose`   | Glucose Strips            | Planned |
 | [KetoMojo](https://keto-mojo.com)               | TBD          | Glucose, Ketones and more | Planned |
