--- a/docs/event-catalog/provider.connection.created.mdx
+++ b/docs/event-catalog/provider.connection.created.mdx
@@ -11,7 +11,7 @@ Constant: `provider.connection.created`
 <ResponseField name="user_id" type="string" required="true">
 </ResponseField>
 <ResponseField name="source" type="ClientFacingProvider" required="true">
-[⚠️ Deprecated] 
+[⚠️ Deprecated] Deprecated. Use `provider` instead. Subject to removal after 1 Jan 2024.
 <Expandable title="ClientFacingProvider" defaultOpen="true">
 <ResponseField name="name" type="string" required="true">
 Name of source of information
@@ -50,7 +50,7 @@ URL for source logo
       "slug": "oura",
       "logo": "https://logo_url.com"
     },
-    "user_id": "483b7a6b-8842-40c8-903d-5c8c96a7580f"
+    "user_id": "99d1773f-6b35-414f-94bb-d13aba6e7178"
   }
 }
 ```
